Closed Bug 918213 Opened 11 years ago Closed 11 years ago

call onended on OscillatorNode even when stop time is before start time

Categories

(Core :: Web Audio, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

No description provided.
This makes OscillatorNode consistent with AudioBufferSourceNode
Attachment #807071 - Flags: review?(ehsan)
Blocks: 918221
Attachment #807071 - Flags: review?(ehsan) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: